--- a/src/handbot_ros2/handbot_gazebo/models/brown_table/model.config
+++ b/src/handbot_ros2/handbot_gazebo/models/brown_table/model.config
@@ -7,7 +7,7 @@
 
   <author>
     <name>Addison Sears-Collins</name>
-    <email>automaticaddison@todo.com</email>
+    <email>darshmenon02@todo.com</email>
   </author>
 
   <description>
