--- a/src/handbot_ros2/handbot_gazebo/package.xml
+++ b/src/handbot_ros2/handbot_gazebo/package.xml
@@ -4,7 +4,7 @@
   <name>handbot_gazebo</name>
   <version>0.0.0</version>
   <description>Gazebo simulation support for handbot robots including worlds and launch files</description>
-  <maintainer email="automaticaddison@todo.com">ubuntu</maintainer>
+  <maintainer email="darshmenon02@todo.com">ubuntu</maintainer>
   <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
