--- a/src/handbot_ros2/handbot_description/package.xml
+++ b/src/handbot_ros2/handbot_description/package.xml
@@ -6,7 +6,7 @@
   <description>Contains the robot description files that define the physical
     aspects of a robot, including its geometry, kinematics, dynamics, and
     visual aspects.</description>
-  <maintainer email="automaticaddison@todo.todo">ubuntu</maintainer>
+  <maintainer email="darshmenon02@gmail.com">ubuntu</maintainer>
   <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
