--- a/src/handbot_ros2/handbot_moveit_config/package.xml
+++ b/src/handbot_ros2/handbot_moveit_config/package.xml
@@ -4,7 +4,7 @@
   <name>handbot_moveit_config</name>
   <version>0.0.0</version>
   <description>MoveIt configuration, launch files, and SRDF files for handbot robots</description>
-  <maintainer email="automaticaddison@todo.com">ubuntu</maintainer>
+  <maintainer email="darshmenon02@todo.com">ubuntu</maintainer>
   <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
