--- a/src/handbot_ros2/handbot_ros2/package.xml
+++ b/src/handbot_ros2/handbot_ros2/package.xml
@@ -4,7 +4,7 @@
   <name>handbot_ros2</name>
   <version>0.0.0</version>
   <description>handbot series robots by Elephant Robotics (metapackage).</description>
-  <maintainer email="automaticaddison@todo.todo">ubuntu</maintainer>
+  <maintainer email="darshmenon02@gmail.com">ubuntu</maintainer>
   <license>BSD-3-Clause</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
 
