--- a/src/handbot_ros2/handbot_system_tests/package.xml
+++ b/src/handbot_ros2/handbot_system_tests/package.xml
@@ -4,7 +4,7 @@
   <name>handbot_system_tests</name>
   <version>0.0.0</version>
   <description>Integration and system tests for verifying handbot robot functionality</description>
-  <maintainer email="automaticaddison@todo.com">ubuntu</maintainer>
+  <maintainer email="darshmenon02@todo.com">ubuntu</maintainer>
   <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
