--- a/src/handbot_ros2/handbot_gazebo/models/brown_table/model.config
+++ b/src/handbot_ros2/handbot_gazebo/models/brown_table/model.config
@@ -6,7 +6,7 @@
   <sdf version="1.6">model.sdf</sdf>
 
   <author>
-    <name>Addison Sears-Collins</name>
+    <name>darsh Menon</name>
     <email>darshmenon02@todo.com</email>
   </author>
 
